--- a/package.json
+++ b/package.json
@@ -11,46 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
-    "@nrwl/angular": "12.10.1",
+    "@angular/animations": "13.3.8",
+    "@angular/common": "13.3.8",
+    "@angular/compiler": "13.3.8",
+    "@angular/core": "13.3.8",
+    "@angular/forms": "13.3.8",
+    "@angular/platform-browser": "13.3.8",
+    "@angular/platform-browser-dynamic": "13.3.8",
+    "@angular/router": "13.3.8",
+    "@nrwl/angular": "14.1.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular-eslint/eslint-plugin": "~12.3.0",
-    "@angular-eslint/eslint-plugin-template": "~12.3.0",
-    "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "~12.2.0",
-    "@angular/compiler-cli": "^12.2.0",
-    "@angular/language-service": "^12.2.0",
-    "@nrwl/cli": "12.10.1",
-    "@nrwl/cypress": "12.10.1",
-    "@nrwl/eslint-plugin-nx": "12.10.1",
-    "@nrwl/jest": "12.10.1",
-    "@nrwl/linter": "12.10.1",
-    "@nrwl/tao": "12.10.1",
-    "@nrwl/workspace": "12.10.1",
-    "@types/jest": "27.0.2",
+    "@angular-devkit/build-angular": "13.3.5",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.3.5",
+    "@angular/compiler-cli": "13.3.8",
+    "@angular/language-service": "13.3.8",
+    "@nrwl/cli": "14.1.5",
+    "@nrwl/cypress": "14.1.5",
+    "@nrwl/eslint-plugin-nx": "14.1.5",
+    "@nrwl/jest": "14.1.5",
+    "@nrwl/linter": "14.1.5",
+    "@nrwl/workspace": "14.1.5",
+    "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.31.1",
-    "@typescript-eslint/parser": "~4.31.1",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "cypress": "^8.3.0",
-    "eslint": "7.22.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.2.3",
-    "jest-preset-angular": "10.0.1",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.3.5"
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.1",
+    "prettier": "2.6.2",
+    "ts-jest": "27.1.4",
+    "typescript": "4.6.4",
+    "nx": "14.1.5"
   }
 }
