--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "13.3.8",
     "@angular/platform-browser-dynamic": "13.3.8",
     "@angular/router": "13.3.8",
+    "@markdoc/markdoc": "^0.1.2",
     "@nrwl/angular": "14.1.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -48,9 +49,15 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
+    "ng-packagr": "^13.0.0",
+    "nx": "14.1.5",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "2.6.2",
     "ts-jest": "27.1.4",
-    "typescript": "4.6.4",
-    "nx": "14.1.5"
+    "ts-node": "9.1.1",
+    "typescript": "4.6.4"
   }
 }
